5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1880_1621.log
== TEST (2019-07-03 14:05:35) 
-- CODE:
from numpy import*
nome = array(eval(input("Nome do Produto: "))).upper()
qtd = array(eval(int(size(nome))))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:08:16) 
-- CODE:
from numpy import*
nome = array(eval(input("Nome do Produto: "))).upper()
print(nome)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:09:12) 
-- CODE:
from numpy import*
nome = array(eval(input("Nome do Produto: "))).upper()
print(nome)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:10:01) 
-- CODE:

nome = array(input("Nome do Produto: "))).upper()
print(nome)
-- ERROR:
File "XXXX", line 2
    nome = array(input())).upper()
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:10:12) 
-- CODE:
from numpy import*
nome = array(input("Nome do Produto: "))).upper()
print(nome)
-- ERROR:
File "XXXX", line 2
    nome = array(input())).upper()
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:10:23) 
-- CODE:
from numpy import*
nome = array(eval(input("Nome do Produto: "))).upper()
print(nome)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:10:46) 
-- CODE:
from numpy import*
np = array(eval(input("Nome do Produto: "))).upper()
print(np)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:11:39) 
-- CODE:
from numpy import*
np = array(eval(input("Nome_do_Produto: "))).upper()
print(np)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:11:46) 
-- CODE:
from numpy import*
np = array(eval(input("Nome_do_Produto: "))).upper()
print(np)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:12:29) 
-- CODE:
from numpy import*
np = array(eval(input("Nome_do_Produto: "))).upper()
print(np)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:32:37) 
-- CODE:
from numpy import*
prod = array(eval(input("Produto: "))).upper()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:32:52) 
-- CODE:
from numpy import*
prod = array(eval(input("Produto: "))).upper()
print(prod)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:32:59) 
-- CODE:
from numpy import*
prod = array(eval(input("Produto: "))).upper()
print(prod)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:33:23) 
-- CODE:
from numpy import*
prod = array(eval(input("Produto: ")))
print(prod)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:34:23) 
-- CODE:
from numpy import*
prod = array(eval(input("Produto: ")))
print(prod)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:39:35) 
-- CODE:
from numpy import*
prod = array(eval(input("Produto: ")))
qtd = array(eval(int(input("quantidade: ")))) 

arroz = 1.25
feijao = 2.60
bis = 1.80
miojo = 0.85
fanta = 3.20


qtd = 
soma = sum(qtd)

print()

-- ERROR:
File "XXXX", line 12
    qtd = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:39:44) 
-- CODE:
from numpy import*
prod = array(eval(input("Produto: ")))
qtd = array(eval(int(input("quantidade: ")))) 

arroz = 1.25
feijao = 2.60
bis = 1.80
miojo = 0.85
fanta = 3.20


#qtd = 
soma = sum(qtd)

print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:39:53) 
-- CODE:
from numpy import*
prod = array(eval(input("Produto: ")))
qtd = array(eval(int(input("quantidade: ")))) 

arroz = 1.25
feijao = 2.60
bis = 1.80
miojo = 0.85
fanta = 3.20


#qtd = 
soma = sum(qtd)

print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:41:20) 
-- CODE:
from numpy import*
prod = array(eval(input("Produto: ")))
qtd = array(eval(int(input("quantidade: ")))) 

arroz = 1.25
feijao = 2.60
bis = 1.80
miojo = 0.85
fanta = 3.20


#qtd = 
soma = sum((qtd) * (prod))

print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
